EC-620 - Sender should send all delete entity uuids